tests/compile-fail/stacked_borrows/pointer_smuggling.stderr
error: Undefined Behavior: attempting a read access using <untagged> at alloc955[0x0], but that tag does not exist in the borrow stack for this location
  --> $DIR/pointer_smuggling.rs:11:23
   |
11 |     let _x = unsafe { *PTR }; //~ ERROR borrow stack
   |                       ^^^^
   |                       |
   |                       attempting a read access using <untagged> at alloc955[0x0], but that tag does not exist in the borrow stack for this location
   |                       this error occurs as part of an access at alloc955[0x0..0x1]
   |
   = help: this indicates a potential bug in the program: it performed an invalid operation, but the rules it violated are still experimental
   = help: see https://github.com/rust-lang/unsafe-code-guidelines/blob/master/wip/stacked-borrows.md for further information
           
   = note: inside `fun2` at $DIR/pointer_smuggling.rs:11:23
note: inside `main` at $DIR/pointer_smuggling.rs:19:5
  --> $DIR/pointer_smuggling.rs:19:5
   |
19 |     fun2(); // if they now use a raw ptr they break our reference
   |     ^^^^^^

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

